# claude-agent-swarm

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
claude_agent_swarm/: __init__.py  agent.py  cli.py  config_loader.py  logging_config.py  message_queue.py  models.py  orchestrator.py  swarm_manager.py  task_decomposer.py
claude_agent_swarm/patterns/: __init__.py  base.py  council.py  leader.py  pipeline.py  swarm.py
claude_agent_swarm/tools/: __init__.py  code_exec.py  file_ops.py  mcp_connector.py  web_search.py
claude_agent_swarm/utils/: __init__.py  retry.py
configs/agents/: analyst.yml  coder.yml  researcher.yml  reviewer.yml
configs/swarm_templates/: analysis_council.yml  code_generation.yml  research_swarm.yml
docs/: api_reference.md  architecture.md  configuration.md  patterns.md
examples/: 01_simple_parallel.py  02_research_swarm.py  03_code_pipeline.py  04_data_extraction.py  05_custom_swarm.py
scripts/: benchmark.py
src/: __init__.py  agent.py  example_config.yaml  exceptions.py  orchestrator.py  state_manager.py  swarm_manager.py  task_decomposer.py  telemetry.py
src/patterns/: __init__.py  base.py  leader.py
src/ui/: __init__.py  dashboard.py  task_board.py
src/utils/: context_manager.py  rate_limiter.py  retry.py
tests/: __init__.py  conftest.py  test_orchestrator.py  test_parallel_execution.py  test_patterns.py  test_state_management.py  test_task_decomposition.py
